--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,5 +1,5 @@
 ---
 spectrum_protect_client::packages:
-  'TivSM-BA': {}
+  'TIVsm-BA': {}
   'TIVsm-API64': {}
 spectrum_protect_client::default_package_action: 'latest'
