--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,18 @@
 # This file can be used to install module dependencies for unit testing
-# See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
+# See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for
+# details
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+    yum:
+      repo: 'puppet-yum'
+      ref: '4.0.0'
+    concat:
+      repo: 'puppetlabs-concat'
+      ref: '5.3.0'
+    stdlib:
+      repo: 'puppetlabs-stdlib'
+      ref: '8.4.0'
+    puppetlabs_augeas_core:
+      repo: 'puppetlabs-augeas_core'
+      ref: '1.3.0'
